# sync-sme

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: brainstorm-notes.md  challenge-log.md  demo-script.md  getting-started.md  idea.md
prompts/: daily_briefing.txt  gap_detect.txt  meeting_minutes.txt  parse_task.txt
src/bot/: __init__.py  client.py  commands.py  handlers.py
src/db/: __init__.py  models.py
src/gaps/: __init__.py  briefing.py  detector.py  tracker.py
src/integrations/: __init__.py  craig.py  obsidian.py  plane.py  plane_api.py
src/llm/: __init__.py  parser.py  prompts.py  router.py  summarizer.py
src/meeting/: __init__.py  pipeline.py  recorder.py  transcriber.py
tests/: test_briefing.py  test_craig.py  test_edge_cases.py  test_gap_detector.py  test_gap_tracker.py  test_handler_gap_integration.py  test_handlers.py  test_meeting_pipeline.py  test_obsidian.py  test_plane.py  test_plane_api.py  test_task_parser.py  test_transcriber.py
