[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-sme"
version = "0.1.0"
description = "AI agent that turns Discord action items into Plane tasks and meeting notes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discli>=1.1.3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
meeting = [
  "pipecat-ai[speechmatics]>=0.0.60",
  "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
